Viewer node update error in the compositor when using the seperate/combine YCbCr nodes #39830

Closed
opened 2014-04-21 16:49:08 +02:00 by b.compositor · 15 comments
b.compositor commented 2014-04-21 16:49:08 +02:00 (Migrated from localhost:3001)

System Information
Operating system and graphics card

GNU Linux, Ubuntu 13.10 (64 bit); ATI Radeon HD 7550M/7570M/7650M

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
f55ca54

Worked: (optional)
2.70a (latest official version)

Short description of error
Viewer node update error in the compositor when using the seperate/combine YCbCr nodes

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

open blender, change to compositor layout, import any image, add an image viewer, add an seperate YCbCr node, add a combine image node and plug its output to the viewer node.
Viewer node shows nothing but a light gray color (.5 for all 3 channels).

Notes:

  • Trying to manipulate the luma/chroma channels (which is why I needed this in the first place) has no effects on the image update
  • Rendering does work but the viewer node is not updated
  • Depending on the node setup, even rendering fails (!)
  • Chaning frames (which usually solves any image viewer update issues) does not help
**System Information** Operating system and graphics card GNU Linux, Ubuntu 13.10 (64 bit); ATI Radeon HD 7550M/7570M/7650M **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) f55ca54 Worked: (optional) 2.70a (latest official version) **Short description of error** Viewer node update error in the compositor when using the seperate/combine YCbCr nodes **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps open blender, change to compositor layout, import any image, add an image viewer, add an seperate YCbCr node, add a combine image node and plug its output to the viewer node. Viewer node shows nothing but a light gray color (.5 for all 3 channels). Notes: - Trying to manipulate the luma/chroma channels (which is why I needed this in the first place) has no effects on the image update - Rendering does work but the viewer node is not updated - Depending on the node setup, even rendering fails (!) - Chaning frames (which usually solves any image viewer update issues) does not help
b.compositor commented 2014-04-21 16:49:09 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
b.compositor commented 2014-04-21 16:49:09 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @b.compositor

Added subscriber: @b.compositor

Added subscriber: @Sergey

Added subscriber: @Sergey

Works fine here. Please always attach the file which demonstrates the issue, this eliminates the probability of misreading your steps.

Works fine here. Please always attach the file which demonstrates the issue, this eliminates the probability of misreading your steps.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

I can reproduce the issue, but the weird thing is that it is random... If I scrubble though the outputs of the "separate YCbCrA" node, sometimes I get the proper channel, sometimes I get a plain grey image. So my guess is that the issue lays in this node and not the viewer node itself.

Here's my blendfile :
YCbCr_bug.blend

I can reproduce the issue, but the weird thing is that it is random... If I scrubble though the outputs of the "separate YCbCrA" node, sometimes I get the proper channel, sometimes I get a plain grey image. So my guess is that the issue lays in this node and not the viewer node itself. Here's my blendfile : [YCbCr_bug.blend](https://archive.blender.org/developer/F85544/YCbCr_bug.blend)

Also there's a scale node in my setup, usually Blender lags by me when I use too big of an image, so I always put one, but it's not affecting the issue.

Also there's a scale node in my setup, usually Blender lags by me when I use too big of an image, so I always put one, but it's not affecting the issue.
b.compositor commented 2014-04-21 23:25:41 +02:00 (Migrated from localhost:3001)
Author

Here's a sample file demonstrating the problem with 9b0ab89

compositor_viewer_node_bug_report.blend.zip

Here's a sample file demonstrating the problem with 9b0ab89 [compositor_viewer_node_bug_report.blend.zip](https://archive.blender.org/developer/F85568/compositor_viewer_node_bug_report.blend.zip)
b.compositor commented 2014-04-21 23:28:11 +02:00 (Migrated from localhost:3001)
Author

Opening that same file with 2.70a works, though it fails with git master

Opening that same file with 2.70a works, though it fails with git master
b.compositor commented 2014-04-21 23:31:13 +02:00 (Migrated from localhost:3001)
Author

Btw note that earlier today on #blender irc channel another linux user also confirmed having similar issues with git master on 64bit linux

Btw note that earlier today on #blender irc channel another linux user also confirmed having similar issues with git master on 64bit linux

@Sergey: I found the actual bug, I tried with a debug build and GDB -> crash

This is what I get in the console:

blender: /home/kevin/Programmation/blender-git/blender/source/blender/blenlib/intern/math_color.c:215: rgb_to_ycc: Assertion `!"invalid colorspace"' failed.

Program received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffc42b8700 (LWP 11893)]

0x00007ffff31b7037 in raise () from /lib/x86_64-linux-gnu/libc.so.6

It happens as soon as I connect one of the outputs of the Separate YCbCrA node with the Viewer Node. It is the only Separate/Combine node to be affected. So far I'm unable to fix this...

@Sergey: I found the actual bug, I tried with a debug build and GDB -> crash This is what I get in the console: ``` blender: /home/kevin/Programmation/blender-git/blender/source/blender/blenlib/intern/math_color.c:215: rgb_to_ycc: Assertion `!"invalid colorspace"' failed. Program received signal SIGABRT, Aborted. [Switching to Thread 0x7fffc42b8700 (LWP 11893)] ``` 0x00007ffff31b7037 in raise () from /lib/x86_64-linux-gnu/libc.so.6 It happens as soon as I connect one of the outputs of the Separate YCbCrA node with the Viewer Node. It is the only Separate/Combine node to be affected. So far I'm unable to fix this...
Author

This issue was referenced by blender/blender-addons-contrib@488581bfc6

This issue was referenced by blender/blender-addons-contrib@488581bfc6cef42a966e6e37b010a4338c812f8b
Author

This issue was referenced by 488581bfc6

This issue was referenced by 488581bfc6cef42a966e6e37b010a4338c812f8b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 488581bfc6.

Closed by commit 488581bfc6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39830
No description provided.