Fix T39830: Viewer node update error in the compositor when using the seperate/combine YCbCr nodes

Mode of the YCC<->RGB was never set..